Document PPDG/src/objects/HPP_Repayment__c.object
<CustomObject>
    <fields>
        <fullName>AcquisitionAmount__c</fullName>
        <label>AcquisitionAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <label>Asset ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <label>EBS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HPP Repayments</relationshipLabel>
        <relationshipName>HPP_Repayments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ratio_Per_Pound__c</fullName>
        <label>Ratio Per Pound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repayment_Amount__c</fullName>
        <label>Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repayment_Date__c</fullName>
        <label>Repayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Running_Balance__c</fullName>
        <label>Running Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Str_Repayment_Amount__c</fullName>
        <label>Repayment Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Str_Repayment_Date__c</fullName>
        <label>Repayment Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Payment_After_Fixed_Period__c</fullName>
        <label>Total Payment After Fixed Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rent__c</fullName>
        <label>Total Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>HPP Repayment</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>HPP Repayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HPP Repayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>